# wasm-capnp-async

./: Cargo.toml  Makefile  README.md
lib/cap/: Cargo.toml  build.rs  echo.capnp
lib/cap/src/: lib.rs
src/: main.rs
wasm/: Cargo.toml  build.rs
wasm/src/: main.rs
